--- a/src/components/CompanySummary/CompanySummary.css
+++ b/src/components/CompanySummary/CompanySummary.css
@@ -2,8 +2,7 @@
     position: relative;
     grid-column-start: 4;
     grid-column-end: 9;
-    height: 100%;
-    max-height: 450px;
+    height: 500px;
     border: 1px solid black;
     border-radius: 10px;
     position: relative;
@@ -16,6 +15,7 @@
 .savedCompanyFilterControls{
     width: 90%;
     text-align: right;
+    margin: 15px;
 }
 
 @media screen and (max-width: 960px) {
