--- a/src/components/ResourcesList/ResourcesList.css
+++ b/src/components/ResourcesList/ResourcesList.css
@@ -2,9 +2,10 @@
   position: relative;
   grid-column-start: 4;
   grid-column-end: 9;
-  height: 100%;
-  max-height: 450px;
+  height: 500px;
+  /* max-height: 450px; */
   border: 1px solid black;
+  padding: 10px;
   border-radius: 10px;
   position: relative;
   background: #3C3230;
