--- a/src/components/SavedEventsSummary/SavedEventsSummary.css
+++ b/src/components/SavedEventsSummary/SavedEventsSummary.css
@@ -2,8 +2,8 @@
     position: relative;
     grid-column-start: 4;
     grid-column-end: 9;
-    height: 100%;
-    max-height: 450px;
+    height: 500px;
+    /* max-height: 450px; */
     border: 1px solid black;
     border-radius: 10px;
     position: relative;
@@ -16,6 +16,11 @@
 .savedEventFilterControls { 
     width: 90%;
     text-align: right;
+    margin: 10px;
+}
+
+#saved-event-search{
+    margin-right: 0px;
 }
 
 @media screen and (max-width: 960px) {
