--- a/src/components/Notifications/Notifications.css
+++ b/src/components/Notifications/Notifications.css
@@ -5,4 +5,31 @@
 .notifications {
   width: 90%;
   margin: 0 auto;
+  line-height: 1.5rem;
+}
+
+.notification{
+  background: #3b3a50;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.notification-button{
+  width: 50px;
+  background: #56403e;
+  border-radius: 10px;
+  height: 2em;
+  color: #eeebd9;
+  margin: auto 10px;
+}
+
+.notification-button:hover {
+  transition: 0.3s;
+  transform: scale(1.2);
+  background: #3C824E;
+  box-shadow: 0.5em 0.5em 0.2em rgb(48, 39, 39);
+}
+
+.notification-button:focus {
+  outline: none;
 }
