--- a/src/components/EventBriteItem/EventBriteItem.css
+++ b/src/components/EventBriteItem/EventBriteItem.css
@@ -1,5 +1,5 @@
 .event-card {
-  width: 80%;
+  width: 90%;
   border: 1px solid black;
   border-radius: 10px;
   margin: 0.75em auto;
@@ -16,6 +16,7 @@
 
 .event-controls button {
   border-radius: 10px;
+  margin: 5px;
   background: none;
   color: #eeebd9;
   padding: 0.5em;
